# miro2_examples

./: README.md
attachment_model/: CMakeLists.txt  package.xml
attachment_model/launch/: child.launch  parent.launch  together.launch
attachment_model/msg/: Care.msg
attachment_model/src/: README.md  child_listener.py  parent_listener.py  robot_controller.py
attachment_model/src/actions/: actions_pub.py  approach.py  explore.py  general_pub.py  gestures_pub.py  node_color_change.py
attachment_model/src/audio_detection/: accumulator.py  actions.py  client_drive_voice.py  (+2 more)
motivation_framework/: attachment_template.py  loop_example.py
nodes/: joints  kin_joints  movement
sign_stimuli/: attend.py  orient.py  sign_stimuli.py
speech_recognition/speech_recognition_coo/: CMakeLists.txt  package.xml
speech_recognition/speech_recognition_porcupine/: CMakeLists.txt
speech_recognition/speech_recognition_porcupine/msg/: Audio.msg
speech_recognition/speech_recognition_porcupine/src/: control_odom.py
speech_recognition/speech_recognition_porcupine/src/processed_data/: No-Miro_en_linux_v2_1_0.ppn  No-Miro_en_raspberry-pi_v2_1_0.ppn
speech_recognition_porcupine/: README.md  package.xml  porcupine_miro_demo.sh
speech_recognition_porcupine/launch/: .miro_porcupine_demo.launch.swp  miro_porcupine_demo.launch
speech_recognition_porcupine/src/: miro_actions.py  miro_demo.py  node_joints.py  node_kinematic_joint.py  node_wag_tail.py  process_audio.py  sensor_audio.py  sound_recognition_porcupine.py
src/: kick_blue_ball.py
src/miro2_examples/: __init__.py
(+36 files in other folders)
